# blaise

./: .gitignore  Makefile  README.md  ast.h  ast_json.c  error.c  error.h  flake.nix  lexer.c  lexer.h  main.c  meson.build  parser.c  parser.h  test  token.c  token.h  utils.h
src/: ast.c  ast.h  ast_free.c  ast_json.c  codegen.c  codegen.h  eval.c  eval.h  hashmap.c  hashmap.h  ir.c  ir.h  main.c  map.c  map.h  meson.build  parse.y  scan.l  utils.h  vec.c  vec.h
tests/: 1.pc  2.pc  assign.bl  assign.json  ast.sh  eval.sh  if.json  if.pc  ifelse.bl  ifelse.json  operations.json  operations.out  operations.pc  simplest.json  simplest.pc  simplest_mixed_case.pc  simplest_unicode.bl  simplest_unicode.json
